# yara

./: .gitignore  AGENT_INTEGRATION.md  AUDIT_COMPLETE.md  AUDIT_PROGRESS.md  AUDIT_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMMIT_READY.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_STANDALONE_SYSTEM.md  COMPLETE_SYSTEM_READY.md  COMPLETE_SYSTEM_SUMMARY.md  COMPLETE_SYSTEM_VERIFICATION.md  COMPLETE_SYSTEM_WITH_RULES.md  COMPREHENSIVE_STATUS.md  COMPREHENSIVE_TODO.md  CONTINUATION_STATUS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DISTRIBUTION_README.md  END_TO_END_TEST.md  EXAMPLE_USAGE.md  EXECUTIVE_SUMMARY.md  FINAL_COMPLETE_SYSTEM.md  FINAL_COMPLETION_REPORT.md  FINAL_DELIVERY.md  FINAL_INTEGRATION_STATUS.md  FINAL_PRODUCTION_STATUS.md  FINAL_STATUS.md  FINAL_STATUS_COMPLETE.md  FINAL_SUMMARY.md  FINAL_UA_STATUS.md  HANDOFF_DOCUMENT.md  INDEX.md  INSTALL.md  INTEGRATION_IMPLEMENTATION.md  INTEGRATION_STATUS.md  LICENSE  MASTER_ROADMAP.md  MASTER_SUMMARY.md  (+65 more)
.claude/: settings.local.json
data/: .gitkeep  cryptex.json
docs/: CRYPTEXT_DICTIONARY.md  CRYPTEX_DICTIONARY_SEED.md  CRYPTEX_DICTIONARY_SPEC.md  IMPLEMENTATION_PRIORITIES.md  IMPROVEMENTS.md  INHOUSE_AUDIT.md  MCP_SERVER_PLAN.md  REENGINEERING_BLUEPRINT.md  R_YARA_ECOSYSTEM_INTEGRATION.md  R_YARA_MODULE_PSEUDOCODE.md  R_YARA_PSEUDOCODE_COMPLETE.md  R_YARA_TRAINING_PSEUDOCODE.md  pseudocode-for-yara.md
documentation/: API_REFERENCE.md  ARCHITECTURE.md  CLI_GUIDE.md  DOCUMENTATION_INDEX.md  GETTING_STARTED.md  MODULES.md  PYRO_INTEGRATION.md  README.md
mcp_server/: README.md  __init__.py  api.py  server.py
mcp_server_pyro/: README.md  __init__.py  api.py  requirements.txt  server.py
mcp_server_ryara/: README.md  __init__.py  requirements.txt  server.py
packaging/: Dockerfile  README.md  build-docker.sh  build-iso.sh  build-packages.sh  build-static.sh
packaging/deb/: control  make-deb.sh
pyro_integration/: __init__.py  installer.py  requirements.txt
reports/: comprehensive_report_20251122_152620.html  comprehensive_report_20251122_152620.json
rust/: .gitignore  Cargo.toml  MODULE_FUNCTIONS.md  README.md
rust/cryptex-api/: Cargo.toml
rust/cryptex-api/src/: feed.rs  main.rs
rust/cryptex-cli/: Cargo.toml
rust/cryptex-cli/src/: main.rs
rust/cryptex-store/: Cargo.toml
rust/cryptex-store/src/: lib.rs
rust/r-yara-api/: Cargo.toml
rust/r-yara-api/src/: feed.rs  main.rs
rust/r-yara-cli/: Cargo.toml  README.md  cryptex.db
rust/r-yara-cli/src/: check.rs  compile.rs  dict.rs  feed.rs  info.rs  main.rs  output.rs  scan.rs  server.rs
rust/r-yara-compiler/: Cargo.toml
rust/r-yara-compiler/src/: lib.rs
rust/r-yara-feed-scanner/: Cargo.toml
rust/r-yara-feed-scanner/src/: lib.rs  main.rs
rust/r-yara-matcher/: Cargo.toml
rust/r-yara-matcher/src/: lib.rs
rust/r-yara-modules/: Cargo.toml
rust/r-yara-modules/src/: console.rs  dex.rs  elf.rs  hash.rs  lib.rs  macho.rs  math.rs  pe.rs  time.rs
rust/r-yara-parser/: Cargo.toml  build.rs
rust/r-yara-parser/src/: ast.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.rs
rust/r-yara-pyro/: Cargo.toml
rust/r-yara-pyro/src/: config.rs  hashing.rs  lib.rs  main.rs  protocol.rs  pyro_connection.rs  task_queue.rs
rust/r-yara-pyro/src/api/: client.rs  handlers.rs  mod.rs  routes.rs  server.rs
rust/r-yara-pyro/src/gateway/: core.rs  mod.rs  routing.rs
rust/r-yara-pyro/src/workers/: base.rs  mod.rs  scanner.rs  transcoder.rs
rust/r-yara-scanner/: Cargo.toml  FEATURES.md  README.md  SUMMARY.md
rust/r-yara-scanner/examples/: scan_demo.rs
rust/r-yara-scanner/src/: context.rs  database.rs  error.rs  lib.rs  process.rs  remote.rs  rules.rs  streaming.rs
rust/r-yara-scanner/tests/: TEST_SUMMARY.md  integration_tests.rs
rust/r-yara-scanner/tests/data/: test_strings.txt
rust/r-yara-scanner/tests/rules/: complex.yar  elf_rule.yar  hash_rule.yar  pe_rule.yar  simple.yar
rust/r-yara-store/: Cargo.toml
rust/r-yara-vm/: Cargo.toml
rust/r-yara-vm/examples/: hash_and_pe.rs  module_functions.rs
rust/r-yara-vm/src/: lib.rs
rust/yara-feed-scanner/: Cargo.toml
rust/yara-feed-scanner/src/: lib.rs  main.rs
sdlc/: INTEGRATION_GUIDE.md  README.md  README_COMPLETE.md  SDLC_CHECKLIST.md  SDLC_QUICK_START.md  SDLC_WORKFLOW.md  cleanup_old_logs.ps1  code_simplification.py  compare_cycles.ps1  export_results.ps1  fix_imports.py  inject_ui_logger.ps1  iterative_sdlc.py  quick_test.py  requirements.txt  run_first_cycle.ps1  run_sdlc_cycle.ps1  security_audit.py  setup_sdlc.ps1  start_ua_session.ps1  ua_testing_framework.py  ui_interaction_logger.js  verify_setup.py  view_results.ps1  view_results.py  windows11_ua_runner.ps1
steering/: COMPREHENSIVE_GAP_ANALYSIS.md  CRYPTEX_PROGRAM.md  GAP_ANALYSIS.md  MASTER_PLAN.md  MCP_SERVER.md  RUST_MIGRATION.md  R_YARA_ROADMAP.md
test_rules/: YARA_RULES_TEST_REPORT.md  combined_rules.yar  result_CVE-2010-0805.json  result_CVE-2010-0887.json  result_CVE-2010-1297.json  result_CVE-2012-0158.json  result_antidebug_antivm.json  result_antidebug_antivm_index.json  result_capabilities.json  result_capabilities_index.json  result_crypto_index.json  result_crypto_signatures.json  result_cve_rules_index.json  result_email_index.json  result_exploit_kits_index.json  result_maldocs_index.json  result_mobile_malware_index.json  result_packers_index.json  result_webshells_index.json  rules_index.json
tools/: README.md  README_TRANSCODER.md  STREAMING_GUIDE.md  __init__.py  audit_agent.py  download_and_test_yara_rules.ps1  enhance_pseudocode.py  export_to_rust.py  fix_duplicates.py  gap_analyzer.py  generate_comprehensive_report.ps1  generate_rules_report.ps1  integrate_downloaded_rules.ps1  mcp_agent_tools.py  pyro_api_endpoints.py  pyro_architecture_analyzer.py  pyro_cryptex_connector.py  pyro_frontend_component.py  pyro_integration_analyzer.py  pyro_integration_test.py  refine_cryptex.py  report_generator.py  rule_loader.py  rule_transcoder.py  rule_transcoder_backup.py  self_audit.py  show_end_product.ps1  test_streaming.py  test_yara_rules.ps1  unified_mcp_client.py  validate_cryptex.py  view_audit_report.ps1
(+31 files in other folders)
