[workspace]
members = [
    "r-yara-parser",
    "r-yara-matcher",
    "r-yara-compiler",
    "r-yara-vm",
    "r-yara-modules",
    "r-yara-scanner",
    "r-yara-store",
    "r-yara-api",
    "r-yara-feed-scanner",
    "r-yara-cli",
    "r-yara-pyro",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["R-YARA Project"]
license = "Apache-2.0"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["ws", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4"] }
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
rand = "0.8"
base64 = "0.22"
async-trait = "0.1"
