[package]
name = "cryptex-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cryptex"
path = "src/main.rs"

[dependencies]
cryptex-store = { path = "../cryptex-store" }
cryptex-api = { path = "../cryptex-api" }
yara-feed-scanner = { path = "../yara-feed-scanner" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

