[package]
name = "r-yara-api"
version = "0.1.0-alpha.1"
edition = "2021"
description = "R-YARA REST API server with streaming support"

[[bin]]
name = "r-yara-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r-yara-store = { path = "../r-yara-store" }
r-yara-feed-scanner = { path = "../r-yara-feed-scanner" }
