[package]
name = "r-yara-cli"
version = "0.1.0"
edition = "2021"
description = "R-YARA command-line interface"

[[bin]]
name = "r-yara"
path = "src/main.rs"

[dependencies]
r-yara-store = { path = "../r-yara-store" }
r-yara-api = { path = "../r-yara-api" }
r-yara-feed-scanner = { path = "../r-yara-feed-scanner" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
