[package]
name = "r-yara-cli"
version = "0.1.0"
edition = "2021"
description = "R-YARA command-line interface"

[[bin]]
name = "r-yara"
path = "src/main.rs"

[dependencies]
# Core R-YARA components
r-yara-parser = { path = "../r-yara-parser" }
r-yara-compiler = { path = "../r-yara-compiler" }
r-yara-matcher = { path = "../r-yara-matcher" }
r-yara-vm = { path = "../r-yara-vm" }
r-yara-modules = { path = "../r-yara-modules" }

# Existing components
r-yara-store = { path = "../r-yara-store" }
r-yara-feed-scanner = { path = "../r-yara-feed-scanner" }

# CLI and async
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system utilities
walkdir = "2.0"
ignore = "0.4"

# Hashing
sha2 = "0.10"
md5 = "0.7"

# Binary parsing
goblin = "0.8"

# Parallel processing
rayon = "1.7"

# Output formatting
csv = "1.3"
colored = "2.0"

# Utilities
humantime = "2.1"
bincode = "1.3"
num_cpus = "1.16"
base64 = "0.21"
