[package]
name = "r-yara-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "R-YARA Bytecode Compiler - Compiles YARA rules to executable bytecode"
repository = "https://github.com/Ununp3ntium115/yara"
keywords = ["yara", "compiler", "bytecode", "malware", "security"]
categories = ["compilers", "development-tools"]

[lib]
name = "r_yara_compiler"
path = "src/lib.rs"

[dependencies]
# Parser integration
r-yara-parser = { path = "../r-yara-parser" }

# Matcher integration
r-yara-matcher = { path = "../r-yara-matcher" }

# Error handling
thiserror.workspace = true

# Utilities
smol_str = "0.2"
indexmap = "2.2"

[dev-dependencies]
pretty_assertions = "1.4"
