[package]
name = "r-yara-feed-scanner"
version = "0.1.0"
edition = "2021"
description = "R-YARA web feed scanner for YARA rules"

[[bin]]
name = "r-yara-feed"
path = "src/bin/cli.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.0"
rss = "2.0"
atom_syndication = "0.12"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
r-yara-store = { path = "../r-yara-store" }
clap = { version = "4.0", features = ["derive"] }
