[package]
name = "r-yara-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "R-YARA Rule Parser - Lexer, Parser, and AST for YARA rules"
repository = "https://github.com/Ununp3ntium115/yara"
keywords = ["yara", "parser", "lexer", "malware", "security"]
categories = ["parsing", "development-tools"]

[lib]
name = "r_yara_parser"
path = "src/lib.rs"

[dependencies]
# Lexer
logos = "0.14"

# Error handling
thiserror.workspace = true
miette = { version = "7.2", features = ["fancy"] }

# Serialization (for AST) - optional for now
serde = { workspace = true, optional = true }

# Utilities
smol_str = "0.2"  # Small string optimization
indexmap = "2.2"  # Ordered maps

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []
serialize = ["dep:serde"]
