[package]
name = "r-yara-store"
version = "0.1.0"
edition = "2021"
description = "R-YARA dictionary and rule storage backend"

[dependencies]
redb = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
structopt = "0.3"

[lib]
name = "r_yara_store"
path = "src/lib.rs"
